\name{NEWS}
\title{News for Package 'bfabricShiny'}

\section{Changes until version 0.0.38 (2017-08-08)}{
  \itemize{
	  \item cosmetics on layout and verbatim output
	  \item added a 2gr shiny app
  }
}