@@ -7,3 +7,10 @@
 	  \item added a 2gr shiny app
   }
 }
+
+\section{Changes until version 0.1.00 (2017-08-08)}{
+  \itemize{
+	  \item support QCloud
+	  \item name of QC injections changed from Fetuin to autoQC01
+  }
+}
